Fix unread message pill + Server Spacing
Fixes the radius being applied wrong on the message pill, allows users to adjust the spacing variable without cutting off the server icons

--- a/DiscordPlus-source.theme.css
+++ b/DiscordPlus-source.theme.css
@@ -937,8 +937,9 @@ padding: var(--dplus-spacing-ui);
 .wrapper-3Njo_c ul {
 	height: calc(inherit + var(--dplus-spacing-ui)) !important;
 }
-
-.listItem-2q53zr :not(span), .listItem-2Ig28I :not(span) {border-radius: var(--dplus-radius-server);}
+.listItem-2Ig28I :not(span) {border-radius: var(--dplus-radius-server);} /*border radius for all*/
+.pill-ZqtR4i {border-radius: 0!important;} /*removes the radius on unread message pill*/
+.listItem-2Ig28I {width: unset!important;} /*allows servers to adjust sizes depending on the ui-spacing variable*/
 .wrapper-sa6paO { top: calc(var(--dplus-icon-server-sidebar) / 10) !important;height: calc(var(--dplus-icon-server-sidebar) / 10 * 8) !important; }
 .pill-1z4sAY { top: calc(var(--dplus-icon-server-sidebar) / 10) }
 
